src/index.css
/* ... */
.slide {
  display: none;
  /* opacity: 0; */
  transition: all 1.5s ease;
}

.active {
  display: block;
  /* opacity: 1; */
  height: 380px;
  border-radius: 10px;
  transform: scale(1.08);
  transition: all 1.5s ease;
}


/*  ====================================================================================================================================*/

/* RECIPES IN PROGRESS PAGE ===========================================================================================================*/
.completedRecipe {
  text-decoration: line-through solid black;
  color:pink;
}

.recipeInProgress {
  display: grid;
  justify-content: center;
}

.boxInProg {
  margin: 20px 20px 15px 20px;
  height: max-content;
  width: 100vw;
  box-shadow: 0 12px 18px -6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  max-width: 70rem;
}

.topInProgress {
  display: grid;
  height: max-content;
  overflow: hidden;
  padding-bottom: 25px;
}

.titleInProgress {
  margin: 25px;
  justify-self: center;
  z-index: 1;
  width: 90vw;
  background-color: var(--first-color-lighten);
  padding: 2rem 1rem;
  border-radius: 40px;
  text-align: center;
  box-shadow: 0 8px 20px rgba(35,0,77,.2);
  animation-duration: .4s;
  animation-name: animate-login;
}

@keyframes animate-login {
  0%{
    transform: scale(1,1);
  }
  50%{
    transform: scale(1.1,1.1);
  }
  100%{
    transform: scale(1,1);
  }
}

.titleInProgress .ingredients {
  display: grid;
  justify-content: center;
  font-size: var(--h3-font-size);
  text-align: justify;
  margin-left: 0rem;
}

.titleInProgress .titleCategory, .ingredients h3 {
  font-size: var(--h1-font-size);
  color: var(--first-color);
}

.topInProgress .imageButtons {
  justify-self: center;
  margin-top: -3rem;
}

.topInProgress .imageButtons .recipeImage {
  width: 86vw;
  border-radius: 0 0 40px 40px;
  filter: drop-shadow(5px 10px 15px rgba(8,9,13,.4));
  margin-bottom: 1.5rem;
}

.topInProgress .imageButtons .likeShareBtns {
  display: flex;
  justify-content: space-around;
  margin-top: -1rem;
  margin-left: 1rem;
  margin-right: 1rem;
  padding: 10px;
  border-radius: 40px;
  box-shadow: 0 2px 10px rgba(35,0,77,.2);
}

.topInProgress .imageButtons .likeShareBtns:hover {
  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, .3);
}

.bottomInProgress {
  padding: 25px;
  font-size: var(--h3-font-size);
}

.bottomInProgress h3 {
  color: var(--first-color-dark);
  font-size: var(--h1-font-size);
  text-align: center;
}

.bottomInProgress p {
  color: var(--second-color) ;
}

.bottomInProgress a button {
  width: 80%;
  padding: 1rem;
  margin-left: 3rem;
  margin-bottom: 5px;
  background-color: var(--first-color);
  color: var(--first-color-lighten );
  font-weight: 600;
  font-size: 1.25rem;
  text-align: center;
  border-radius: .5rem;
  transition: .3s;
  cursor: pointer;
}

.bottomInProgress a button:hover {
  background-color: var(--first-color-dark);
  color: #FFFF;
}

/*  ====================================================================================================================================*/

/* SHAREBUTTONS COMPONENT ===========================================================================================================*/
.showMsg {
  position: absolute;
  margin-left: -10px;
  margin-top: 15px;
}

.hideMsg {
  display: none;
}

/*  ====================================================================================================================================*/

/* DONE RECIPE PAGE ===========================================================================================================*/
.done-card {
  /* border: solid black 1px; */
  /* background-color: #FFF; */
  display: flex;
  flex-direction: row;
  /* justify-content: space-between; */
  box-shadow: 0 2px 10px rgba(35,0,77,.2);
  width: 350px;
  /* height: 400px; */
  border-radius: 1rem;
  overflow-y: hidden;
  cursor: pointer;
  margin: 20px 5px 0 5px;
}

.done-card a {
  display: flex;
  flex-direction: row;
  /* width: 300px; */
}

.doneImg {
  border-radius: 40px;
  margin: 10px;
  width: 150px;
  box-shadow: 0 2px 10px rgba(35,0,77,.2);
  filter: drop-shadow(5px 10px 15px rgba(8,9,13,.4));
  /* height: 143px; */
}

.done-card-text {
  color: var(--third-color);
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin: 10px 5px;
  /* max-width: 150px; */
}

.done-category {
  font-size: var(--small-font-size);
  color: var(--first-color-light);
}

.done-name {
  font-size:var(--h1-font-size);
  color: var(--first-color);
}

.tags {
  display: flex;
  justify-content: space-around;
}

.tags div {
  box-shadow: 0 2px 10px rgba(35,0,77,.2);
  border-radius: 40px;
  padding: 8px;
}

.share-done {
  position: absolute;
  margin-top: 10px;
  margin-left: 300px;

  /* top: 0px;
  right: 0px; */
  /* margin-right: 0; */
  /* margin-left: 0; */
}

/* RECOMMENDED RECIPES COMPONENENT ===========================================================================================================*/
/* PROFILE PAGE ===========================================================================================================*/
.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.card {
  position: relative;
  margin: 3px 5px 65px 5px;
  width: 100%;
  max-width: 1024px;
  height: 700px;
  border-radius: 15px;
  box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
  overflow: hidden;
}

.card:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 5.5rem;
  background-image: linear-gradient(to top, #00F2FE, #4FACFE );
}

.mainContentProfile {
  position: absolute;
  top: 2rem;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.mainContentProfile .imageProfile {
  position: relative;
  width: 110px;
  height: 110px;
  border-radius: 50%;
  background: url('images/profile.jpg') no-repeat center / cover;
  border: 4px solid #00D8FE ;
  margin-bottom: 2px;
  overflow: hidden;
}
/* ... */

